<resources>
    <string name="app_name">KotlinUberDriver</string>
    <string name="sign_in_with_phone">Sign In with Phone</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="txt_continue">Continue</string>
    <string name="txt_welcome_to_reg">Let\'s start with creating your account</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="title_activity_driver_home">DriverHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_exit">Sign out</string>
    <string name="title_activity_maps">Map</string>

    <string name="demo_rating">0.0</string>
    <string name="decline">Decline</string>
    <string name="uber">Uber</string>
    <string name="permission_require">Permission require</string>
    <string name="decline_success">You have decline this request</string>
    <string name="decline_failed">Decline failed</string>
    <string name="token_not_found">Token not found</string>
    <string name="start_uber">START UBER</string>
    <string name="complete_trip">COMPLETE TRIP</string>
    <string name="rider_not_found">Rider not found</string>
    <string name="accept_failed">Accept failed</string>
    <string name="driver_arrived">Driver arrived</string>
    <string name="your_driver_arrived">Your driver arrived</string>
    <string name="time_over">Time Over</string>
    <string name="complete_trip_success">Thank you! You have completed this trip.</string>
    <string name="complete_trip_failed">Failed to complete trip</string>
    <string name="service_unavailable">Service unavailable</string>
</resources>